--- a/app/src/main/res/layout/activity_profession_fee_detail.xml
+++ b/app/src/main/res/layout/activity_profession_fee_detail.xml
@@ -36,7 +36,7 @@
                 android:background="@android:color/black" />
 
             <ImageView
-                android:id="@+id/edit_case_details_iv"
+                android:id="@+id/edit_payment_details_iv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
@@ -50,51 +50,6 @@
                 android:orientation="vertical"
                 android:paddingLeft="15dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp">
-
-                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="3"
-                        android:text="Court"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/dimen_15sp" />
-
-                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                        android:id="@+id/court_tv"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="7"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/dimen_15sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp">
-
-                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="3"
-                        android:text="Judge"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/dimen_15sp" />
-
-                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                        android:id="@+id/judge_tv"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="7"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/dimen_15sp" />
-
-                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -128,104 +83,58 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
-                        android:text="Parties"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/dimen_15sp" />
-
-                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                        android:id="@+id/parties_name_tv"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="7"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/dimen_15sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp">
-
-                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="3"
-                        android:text="Next Date"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/dimen_15sp" />
-
-                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                        android:id="@+id/next_date_tv"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="7"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/dimen_15sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp">
-
-                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="3"
-                        android:text="Stage"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/dimen_15sp" />
-
-                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                        android:id="@+id/stage_tv"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="7"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/dimen_15sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp">
-
-                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="3"
-                        android:text="Prev date"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/dimen_15sp" />
-
-                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                        android:id="@+id/prev_date_tv"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="7"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/dimen_15sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp">
-
-                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="3"
                         android:text="Client"
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/dimen_15sp" />
 
                     <com.example.devrathrathee.legal.utils.RobotoLightTextView
                         android:id="@+id/client_tv"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="7"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp">
+
+                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:text="Court"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
+
+                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
+                        android:id="@+id/court_tv"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="7"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp">
+
+                    <com.example.devrathrathee.legal.utils.RobotoBoldTextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:text="Category"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/dimen_15sp" />
+
+                    <com.example.devrathrathee.legal.utils.RobotoLightTextView
+                        android:id="@+id/category_tv"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7"
@@ -267,12 +176,12 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
-                        android:text="Category"
+                        android:text="Payment \nStatus"
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/dimen_15sp" />
 
                     <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                        android:id="@+id/category_tv"
+                        android:id="@+id/payment_status_tv"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7"
@@ -280,6 +189,7 @@
                         android:textSize="@dimen/dimen_15sp" />
 
                 </LinearLayout>
+
             </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
