--- a/app/src/main/res/layout/matter_sent_item.xml
+++ b/app/src/main/res/layout/matter_sent_item.xml
@@ -33,12 +33,35 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Counselor"
+                    android:text="Court"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/edit_text_size" />
 
                 <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                    android:id="@+id/counselor_name_tv_name_tv"
+                    android:id="@+id/court_tv"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="7"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/edit_text_size" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
+
+                <com.example.devrathrathee.legal.utils.RobotoBoldTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:text="Client"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/edit_text_size" />
+
+                <com.example.devrathrathee.legal.utils.RobotoLightTextView
+                    android:id="@+id/client_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
@@ -61,30 +84,7 @@
                     android:textSize="@dimen/edit_text_size" />
 
                 <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                    android:id="@+id/parties_name_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="7"
-                    android:textColor="@android:color/black"
-                    android:textSize="@dimen/edit_text_size" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
-
-                <com.example.devrathrathee.legal.utils.RobotoBoldTextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:text="Status"
-                    android:textColor="@android:color/black"
-                    android:textSize="@dimen/edit_text_size" />
-
-                <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                    android:id="@+id/status_tv"
+                    android:id="@+id/parties_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
