--- a/app/src/main/res/layout/prof_fee_item.xml
+++ b/app/src/main/res/layout/prof_fee_item.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="100dp"
     android:layout_margin="5dp"
     android:background="@android:color/darker_gray"
     android:elevation="5dp"
@@ -33,12 +33,12 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Counselor"
+                    android:text="Client"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/edit_text_size" />
 
                 <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                    android:id="@+id/counselor_name_tv_name_tv"
+                    android:id="@+id/client_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
@@ -56,12 +56,12 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Parties"
+                    android:text="Court"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/edit_text_size" />
 
                 <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                    android:id="@+id/parties_name_tv"
+                    android:id="@+id/court_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
@@ -79,12 +79,12 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Status"
+                    android:text="Payment \nStatus"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/edit_text_size" />
 
                 <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                    android:id="@+id/status_tv"
+                    android:id="@+id/payment_status_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
