--- a/app/src/main/res/layout/activity_jobs_list.xml
+++ b/app/src/main/res/layout/activity_jobs_list.xml
@@ -21,7 +21,7 @@
         android:background="@drawable/white_background">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/professional_fees_rv"
+            android:id="@+id/jobs_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="30dp"
@@ -29,7 +29,7 @@
             android:layout_marginTop="20dp" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/add_payment_button_fab"
+            android:id="@+id/add_job_button_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
