--- a/app/src/main/res/layout/cases_item.xml
+++ b/app/src/main/res/layout/cases_item.xml
@@ -127,7 +127,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
-                    android:textColor="@android:color/black"
+                    android:textColor="@android:color/holo_red_dark"
                     android:textSize="@dimen/edit_text_size"/>
 
             </LinearLayout>
