--- a/app/src/main/res/layout/activity_add_case.xml
+++ b/app/src/main/res/layout/activity_add_case.xml
@@ -170,6 +170,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_minus_5"
                         android:maxLines="1"
+                        android:inputType="number"
                         android:singleLine="true"
                         android:textSize="@dimen/edit_text_size" />
 
