--- a/app/src/main/res/layout/activity_case_details.xml
+++ b/app/src/main/res/layout/activity_case_details.xml
@@ -44,6 +44,26 @@
                 android:background="@drawable/edit_icon_32"
                 android:padding="5dp" />
 
+            <ImageView
+                android:id="@+id/send_case_details_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="60dp"
+                android:background="@drawable/send_icon_32"
+                android:padding="5dp" />
+
+            <ImageView
+                android:id="@+id/delete_case_details_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="110dp"
+                android:background="@drawable/delete_icon_32"
+                android:padding="5dp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
