--- a/app/src/main/res/layout/job_item.xml
+++ b/app/src/main/res/layout/job_item.xml
@@ -34,12 +34,12 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Court"
+                    android:text="Location"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/edit_text_size" />
 
                 <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                    android:id="@+id/court_name_tv"
+                    android:id="@+id/location_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
@@ -57,12 +57,12 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Lawyer"
+                    android:text="Specialization"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/edit_text_size" />
 
                 <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                    android:id="@+id/lawyer_tv"
+                    android:id="@+id/specialization_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
@@ -82,12 +82,12 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Phone"
+                    android:text="Description"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/edit_text_size" />
 
                 <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                    android:id="@+id/phone_tv"
+                    android:id="@+id/description_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
@@ -105,12 +105,12 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Email"
+                    android:text="Posted Date"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/edit_text_size" />
 
                 <com.example.devrathrathee.legal.utils.RobotoLightTextView
-                    android:id="@+id/email_tv"
+                    android:id="@+id/posted_date_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
@@ -122,7 +122,7 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/send_iv"
+            android:id="@+id/delete_job_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -130,7 +130,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/send_icon_32" />
+            android:background="@drawable/delete_icon_32" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
