--- a/app/src/main/res/layout/activity_profession_fee_detail.xml
+++ b/app/src/main/res/layout/activity_profession_fee_detail.xml
@@ -44,6 +44,16 @@
                 android:background="@drawable/edit_icon_32"
                 android:padding="5dp" />
 
+            <ImageView
+                android:id="@+id/delete_payment_details_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginTop="60dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/delete_icon_32"
+                android:padding="5dp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
